# mta_ridership

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  run_pipeline.py  test_file.txt
api_data_download/: README.md  combine.py  download.py
data/production/: monthly_ridership_puma.csv
docs/: project-structure.md  run-pipeline.md
pipelines/: calculate_baseline.py  calculate_baseline_local_turnstile.py  calculate_ridership_local.py  monthly_ridership_update.py  run_historical_turnstile.py
references/: baseline_special_cases.csv  dataset_id_on_nyopendata.json  turnstile_data_nyopendata.json
references/docs/: PIPELINE.md  data_filters.md  puma_mapping.md  ridership_data.md  scp_identifier.md  second_avenue_subway_special_case.md  socrata_api_setup.md  subway_stations.md  turnstile_api_limitation.md  turnstile_data.md
references/pipelines/: monthly_ridership_update.md
references/scripts/: api_ridership_filters.md  calculate_baseline.md  update_data.md  update_ridership_data.md
scripts/: add_puma_to_stations.py  calculate_baseline.py  calculate_final.py  calculate_raw_monthly_turnstile.py  calculate_ridership.py  calculate_ridership_station_api.py  combine_turnstile_data.py  enrich_final_data.py  extract_unique_stations_turnstile.py  process_ridership_data.py  process_turnstile_data.py  stage_ridership_data.py  stage_turnstile_data.py  update_data.py  update_ridership_data.py  verify_baseline_special_cases.py
scripts/local/: README.md  (+10 more)
tests/: test_monthly_ridership_update.py  test_run_pipeline.py  test_socrata_request_json.py
(+44 files in other folders)
