[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mta-ridership"
version = "0.1.0"
description = "NYC Subway Recovery Tracker data processing pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "geopandas>=0.14.0",
  "pandas>=1.3.0",
  "python-dotenv>=1.0.0",
  "requests>=2.28.0",
  "rich>=13.0.0",
  "scipy>=1.9.0",
  "shapely>=2.0.0",
  "tqdm>=4.62.0",
]

[tool.setuptools]
packages = []
py-modules = []
